# fast_idler_supports_detection

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  point_clouds.rviz
config/: imu_filter.yaml
fast_idler_supports_detection/: CMakeLists.txt  package.xml  point_clouds.rviz
fast_idler_supports_detection/include/fast_idler_supports_detection/: cluster_extraction.hpp  fast_idler_supports_detection.hpp  pcl_utils.hpp  point_types.hpp  utils.hpp
fast_idler_supports_detection/launch/: fast_idler_supports_detection.launch.py  objects_detection.launch.py
fast_idler_supports_detection/scripts/: diff.py  isometic.py  range_his.py
fast_idler_supports_detection/src/: cluster_extraction.cpp  fast_idler_supports_detection.cpp  fast_idler_supports_detection_node.cpp  point_types.cpp  utils.cpp
include/objects_detection/: cluster_extraction.hpp  down_sampling.hpp  ground_removal.hpp  object_detection.hpp  outlier_removal.hpp  utils.hpp
objects_detection/: CMakeLists.txt  package.xml  point_clouds.rviz
objects_detection/include/objects_detection/: cluster_extraction.hpp  object_detection.hpp  pcl_utils.hpp  point_types.hpp  utils.hpp
objects_detection/launch/: imu_filter_madgwick.launch.py  lidarslam.launch.py  objects_detection.launch.py
objects_detection/scripts/: clasification_analizer.py  diff.py  diff_label.py  histogram.py  isometic.py  point_cloud_cli.py  range_his.py  utils.py
objects_detection/src/: cluster_extraction.cpp  node.cpp  object_detection.cpp  point_types.cpp  save_pointcloud.cpp  utils.cpp
objects_detection/test/: test_tutorial.cpp
objects_detection/test_data/: README.md  leg.dae  leg.stl  trained_ism_model.txt
objects_detection/test_data/alignment_prerejective/: alignment_prerejective.cpp
objects_detection/test_data/correspondence_group/: correspondence_grouping.cpp
objects_detection/test_data/cylinder_segmentation/: cylinder_segmentation.cpp
objects_detection/test_data/implict_shape_model/: implicit_shape_model.cpp
objects_detection/test_data/min_cut_segmentation/: min_cut_segmentation.cpp
scripts/: contours.py  counts_statistics.py  data_loader.py  data_splitter.py  duration_statistics.ipynb  feature.py  histogram.py  isometic.py  plot_at_timestamp.ipynb  plot_utils.py  plotter.ipynb  point_cloud_cli.py
src/: cluster_extraction.cpp  down_sampling.cpp  ground_removal.cpp  object_detection.cpp  outlier_removal.cpp  save_pointcloud.cpp  utils.cpp
test/: test_tutorial.cpp
test_data/: README.md  leg.dae  trained_ism_model.txt
test_data/alignment_prerejective/: CMakeLists.txt  alignment_prerejective.cpp
test_data/correspondence_group/: correspondence_grouping.cpp
test_data/cylinder_segmentation/: cylinder_segmentation.cpp
test_data/implict_shape_model/: CMakeLists.txt  implicit_shape_model.cpp
