<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fast_idler_supports_detection</name>
  <version>0.1.0</version>
  <description>Package for fast idler supports detection in various environments using PCL and density histograms.</description>
  <maintainer email="delicat.kuba@gmail.com">Jakub Delicat</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libpcl</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>libpcl</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>vision_msgs</build_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
